# iotctl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  HomeForm.ui.qml  LightControl.ui.qml  LoginPage.ui.qml  Page1Form.ui.qml  Readme.md  cmake_install.cmake  iotctl.cbp  main.cpp  main.qml  qml.qrc
cmake/: android-toolchain.cmake  qt-android-deployment.json.in  qt-android-mk-apk.cmake
examples/: CMakeLists.txt  philips_hue_example_query.cpp
include/: iotctl_filesystem_manager.h  iotctl_http_client.hpp  iotctl_light.hpp  iotctl_light_control.hpp  iotctl_login_controller.h  iotctl_philips_hue_bridge_connection.hpp
src/: iotctl_filesystem_manager.cpp  iotctl_http_client.cpp  iotctl_light.cpp  iotctl_light_control.cpp  iotctl_login_controller.cpp  iotctl_philips_hue_bridge_connection.cpp
